--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -9,6 +9,9 @@
   <script type="text/javascript" src="lib/jasmine-1.3.0/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.0/jasmine-html.js"></script>
 
+  <script type="text/javascript" src="src/Generator.js"></script>
+  <script type="text/javascript" src="spec/GeneratorSpec.js"></script>
+
   <script type="text/javascript">
     (function() {
       var jasmineEnv = jasmine.getEnv();
